esto es el cambio de la configuracion

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#ESto es el fichero de configuración
 server.port=8081
 server.error.whitelabel.enabled=false
 spring.datasource.url=jdbc:mysql://localhost:3306/comentarios
